# DeMark-World

./: .copier-answers.yml  .gitignore  README-zh.md  README.md  app.py  cli.py  development.md  docker-compose.yaml  example.py  pyproject.toml  start_server.py
src/demark_world/: configs.py  core.py  watermark_cleaner.py  watermark_detector.py
src/demark_world/cleaner/: e2fgvi_hq_cleaner.py  lama_cleaner.py
src/demark_world/iopaint/: __init__.py  api.py  batch_processing.py  benchmark.py  cli.py  const.py  download.py  helper.py  model_manager.py  runtime.py  schema.py  web_config.py
src/demark_world/iopaint/file_manager/: file_manager.py
src/demark_world/iopaint/model/: base.py  controlnet.py  ddim_sampler.py  fcf.py  instruct_pix2pix.py  kandinsky.py  lama.py  ldm.py  manga.py  mat.py  mi_gan.py  opencv2.py  paint_by_example.py  plms_sampler.py  sd.py  sdxl.py  utils.py  zits.py
src/demark_world/iopaint/model/anytext/: anytext_model.py  anytext_pipeline.py  anytext_sd15.yaml  main.py  utils.py
src/demark_world/iopaint/model/anytext/cldm/: cldm.py  ddim_hacked.py  embedding_manager.py  hack.py  model.py  recognizer.py
src/demark_world/iopaint/model/anytext/ldm/: util.py
src/demark_world/iopaint/model/anytext/ldm/models/: autoencoder.py
src/demark_world/iopaint/model/anytext/ldm/models/diffusion/: ddim.py  ddpm.py  plms.py
src/demark_world/iopaint/model/anytext/ldm/models/diffusion/dpm_solver/: dpm_solver.py  sampler.py
src/demark_world/iopaint/model/anytext/ldm/modules/: attention.py
src/demark_world/iopaint/model/anytext/ldm/modules/diffusionmodules/: model.py  openaimodel.py  upscaling.py  util.py
src/demark_world/iopaint/model/anytext/ldm/modules/distributions/: distributions.py
src/demark_world/iopaint/model/anytext/ldm/modules/encoders/: modules.py
src/demark_world/iopaint/model/anytext/ocr_recog/: RNN.py  RecModel.py  RecSVTR.py
src/demark_world/iopaint/model/brushnet/: brushnet.py  brushnet_unet_forward.py  brushnet_wrapper.py  brushnet_xl_wrapper.py  pipeline_brushnet.py  pipeline_brushnet_sd_xl.py  unet_2d_blocks.py
src/demark_world/iopaint/model/helper/: controlnet_preprocess.py  g_diffuser_bot.py
src/demark_world/iopaint/model/power_paint/: pipeline_powerpaint.py  power_paint.py  power_paint_v2.py  powerpaint_tokenizer.py
src/demark_world/iopaint/model/power_paint/v2/: BrushNet_CA.py  pipeline_PowerPaint_Brushnet_CA.py  unet_2d_blocks.py  unet_2d_condition.py
src/demark_world/iopaint/plugins/: __init__.py  anime_seg.py  base_plugin.py  briarmbg2.py  gfpgan_plugin.py  gfpganer.py  interactive_seg.py  realesrgan.py  remove_bg.py  restoreformer.py
src/demark_world/iopaint/plugins/basicsr/: arch_util.py  img_util.py
src/demark_world/iopaint/plugins/facexlib/detection/: align_trans.py  retinaface.py  retinaface_net.py  retinaface_utils.py
src/demark_world/iopaint/plugins/facexlib/parsing/: __init__.py  parsenet.py
src/demark_world/iopaint/plugins/facexlib/utils/: face_restoration_helper.py  misc.py
src/demark_world/iopaint/plugins/gfpgan/archs/: gfpganv1_clean_arch.py  restoreformer_arch.py  stylegan2_clean_arch.py
src/demark_world/iopaint/plugins/segment_anything/: build_sam.py  predictor.py  predictor_hq.py
src/demark_world/iopaint/plugins/segment_anything/modeling/: image_encoder.py  image_encoder_hq.py  mask_decoder.py  sam_hq.py  tiny_vit_sam.py
src/demark_world/iopaint/plugins/segment_anything2/: sam2_image_predictor.py
src/demark_world/iopaint/plugins/segment_anything2/modeling/: memory_attention.py  position_encoding.py  sam2_base.py  sam2_utils.py
src/demark_world/iopaint/plugins/segment_anything2/modeling/backbones/: hieradet.py  image_encoder.py  utils.py
src/demark_world/iopaint/plugins/segment_anything2/modeling/sam/: mask_decoder.py  prompt_encoder.py  transformer.py
src/demark_world/iopaint/plugins/segment_anything2/utils/: transforms.py
src/demark_world/iopaint/tests/: test_adjust_mask.py  test_anytext.py  test_brushnet.py  test_controlnet.py  test_instruct_pix2pix.py  test_load_img.py  test_low_mem.py  test_match_histograms.py  test_model.py  test_model_md5.py  test_model_switch.py  test_outpainting.py  test_paint_by_example.py  test_plugins.py  test_save_exif.py  test_save_quality.py  test_sd_model.py  test_sdxl.py  utils.py
src/demark_world/models/model/: e2fgvi.py  e2fgvi_hq.py
src/demark_world/models/model/modules/: feat_prop.py  flow_comp.py  spectral_norm.py  tfocal_transformer.py  tfocal_transformer_hq.py
src/demark_world/server/: app.py  db.py  lifespan.py  models.py  router.py  schemas.py  worker.py
src/demark_world/utils/: download_utils.py  imputation_utils.py  video_utils.py  watermark_utls.py
